2006-04-09  Phil Blundell  <pb@reciva.com>

	* event-db.c (event_db_list_for_period_internal): Expand
	recurrence of events that occur multiple times in the period.

2006-02-12  Phil Blundell  <pb@reciva.com>

	* Version 0.21 released.

2006-02-12  Phil Blundell  <pb@reciva.com>

	* event-db.c (event_sort_func): Improve sorting.
	(event_db_list_for_period_internal): Correct handling of maximum
	event count.

2006-02-11  Florian Boor <florian@kernelconcepts.de>

	* Version 0.20 released.
    * event-db.c, event-db.h: Add documentation.
    * event-db.c (event_db_make_eventid): Make static.
    * event-db.h: Make all parameters named to avoid confusing gtk-doc.
	* doc/libeventdb-docs.sgml: Change documentation license to 
	become LGPL.
    * doc/tmpl/event-db.sgml: Add proper section titles.

2006-02-05  Phil Blundell  <pb@reciva.com>

	* Version 0.19 released.

2006-02-05  Phil Blundell  <pb@reciva.com>

	* Makefile.am (DISTCHECK_CONFIGURE_FLAGS): Enable gtk-doc.

2006-02-04  Phil Blundell  <pb@reciva.com>

	* event-db.c (event_db_clear_recurrence): Don't crash if no
	recurrence was set.

2006-02-01  Phil Blundell  <pb@reciva.com>

	* event-db.c (event_db_clear_recurrence): New function.
	(event_sort_func): Handle both recurring and non recurring events.
	(event_sort_func_recur): Deleted.
	(recurring_events, one_shot_events): Change from GSList to GList.
	All uses updated.
	(event_db_add_internal): Set ev->list.
	(event_db_write): Move event between lists if required; just
	re-sort if not.
	(event_db_list_for_period_internal): Remove unnecessary scanning
	of returned list.
	* gpe/event-db.h (event_db_clear_recurrence): Add prototype.
	(struct event_s): Add list.

2006-01-01  Phil Blundell  <pb@reciva.com>

	* doc/Makefile.am (GTKDOC_CC, GTKDOC_LD): Delete duplicated
	definitions to stop automake freaking out.

2005-12-31  Florian Boor <florian@kernelconcepts.de>

    * Release version 0.18.
    * Makefile.am: Set library version, incompatible to older version.